--- a/THANKS
+++ b/THANKS
@@ -16,6 +16,8 @@ authors of Gnuastro. We hereby gratefully acknowledge their help and
 support in Gnuastro. The list is ordered alphabetically.
 
     Karl Berry                           karl@gnu.org
+    Roland Bacon                         roland.bacon@univ-lyon1.fr
+    Antonio Diaz Diaz                    antonio@gnu.org
     Takashi Ichikawa                     ichikawa@astr.tohoku.ac.jp
     Brandon Invergo                      brandon@gnu.org
     Mohammad-Reza Khellat                moha.khe@gmail.com
