2 by 2 input matrix accounts for FITS positions
The FITS standard defines the center of the first pixel in the image to
have the position of 1.0000 and all FITS positions are defined based on
that. However, to do warping properly, we need to consider the full pixel
area, so it is necessary to shift the center first by 0.5, apply the
transformation, and then shift it by -0.5.

When the user gives a 3 by 3 matrix, it is their own responsability to
account for this shift. However, when they give a 2 by 2 matrix, we can do
the correction internally. This commit adds this capability: MakeCatalog
now does this correction internally when given a 2 by 2 matrix.

This process was actually done while I was working on task #14170 ("Align
option in image Warp"), so I have also partly included the `--align' option
with this commit, but if a user asks for it, MakeProfiles will complain
that it is not ready yet.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -9133,14 +9133,17 @@ scaled.}.
 
 @item -m
 @itemx --matrix
-(@option{=STR}) The warp/transformation matrix. All the elements in
-this matrix must be separated by any number of space, tab or comma
-(@key{,}) characters. If you want to use the first two, then be sure
-to wrap the matrix within double quotation marks (@key{"}) so they are
-not confused with other arguments on the command-line, see
-@ref{Options}. This also applies to values in the configuration files,
-see @ref{Configuration file format}.  The transformation matrix can be
-either 2 by 2 or 3 by 3 array, see @ref{Warping basics}.
+(@option{=STR}) The warp/transformation matrix. All the elements in this
+matrix must be separated by any number of space, tab or comma (@key{,})
+characters. If you want to use the first two, then be sure to wrap the
+matrix within double quotation marks (@key{"}) so they are not confused
+with other arguments on the command-line, see @ref{Options}. This also
+applies to values in the configuration files, see @ref{Configuration file
+format}.  The transformation matrix can be either 2 by 2 or 3 by 3
+array. In the former case (if a 2 by 2 matrix is given), then a translation
+is also added to correct for the FITS definition of position to create a
+usable 3 by 3 matrix (see @ref{Warping basics}, @ref{Merging multiple
+warpings}, and the box above for more).
 
 @cindex NaN
 The determinant of the matrix has to be non-zero and it must not
