ImageWarp can rotate and scale without matrix
Writing the matrix manually on the command-line can be both annoying and
buggy, even a 2 by 2 matrix. For scaling you have to check if the values
are placed properly and the two values on the diagonal are equal. For
rotation you have to calculate the sine and cosine and repeat them which is
very annoying and horribly buggy.

So with this commit two new options are added to ImageWarp: `--roate' and
`--scale'. They only take one value (the angle in degrees and the scaling
factor respectively) and create the matrix internally.

Currently only one such operations can be defined in each run of
ImageWarp. So although this commit was done in the spirit of task #13562
("Separate warp options"), it does not complete it. In that task, we
planned to allow the user to sequentially give any number of scaling,
rotation, translation and etc operations to be done on the image. But that
job is a little too complicated for now (I don't have time).

However, the infra-structure is now in place to do the work easily: the
separate matrices are read in `ui.c'. To make task #13562 a reaily, we just
have to build 3 by 3 matices for each step and apply the FITS position
correction before and after all subsequent options. A linked list can also
keep the separate values.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -9075,18 +9075,23 @@ One line examples:
 
 @example
 $ astimgwarp matrix.txt image.fits
+$ astimgwarp --align rawimage.fits
+$ astimgwarp --scale 1.82 image.fits
+$ astimgwarp --rotate=37.92 image.fits
 $ astimgwarp --matrix=0.2,0,0.4,0,0.2,0.4,0,0,1 image.fits
 $ astimgwarp --matrix="0.7071,-0.7071  0.7071,0.7071" image.fits
 @end example
 
-ImageWarp can accept two arguments, one (the input image) is mandatory
-if any processing is to be done. An optional argument is a plain text
-file that will keep the warp/transform matrix, see @ref{Warping
-basics}. There is also the @option{--matrix} option from which the
-matrix can be literally specified on the command-line. If both are
-present when calling ImageWarp, the contents of the plain text file
-have higher precedence. The general options to all Gnuastro programs
-can be seen in @ref{Common options}.
+ImageWarp can accept two arguments, one (an image) is mandatory if any
+processing is to be done. An optional argument is a plain text file, which
+must contain the warp/transform matrix, see @ref{Warping basics}. There is
+also the @option{--matrix} option from which the matrix can be literally
+specified on the command-line. If both are present when calling ImageWarp,
+the contents of the plain text file have higher precedence. You can also
+specify standard transformations without an explicit matrix as discussed
+below. If multiple transformations are specified, then ImageWarp will
+inform you and abort. The general options to all Gnuastro programs can be
+seen in @ref{Common options}.
 
 @cindex WCSLIB
 @cindex World Coordinate System
@@ -9155,12 +9160,27 @@ general homography matrix of @ref{Warping basics}, it should be called
 with @command{--matrix=a,b,c,d,e,f,g,h,1}.
 
 @item -a
-@item --align
+@itemx --align
 Align the image and celestial (WCS) axes, such that the vertical image
 direction (when viewed in SAO ds9) corresponds to the declination and the
 horizontal axis is the inverse of the Right Ascension (RA). The inverse of
 the RA is chosen so the image can correspond to what you would actually see
 on the sky and is common in most survey images.
+
+@item -r
+@itemx --rotate
+(@option{=FLT}) Rotate the input image by the given angle in degrees. Note
+that commonly, the WCS structure of the image is set such that the RA is
+the inverse of the image horizontal axis which increases towards the right
+in the FITS standard and as viewed by SAO ds9. So the default center for
+rotation is on the right of the image. If you want to rotate about other
+points, you have to define your own transformation matrix by first shifting
+the central point, then applying your rotation and then returning the
+center back to the original position, see @ref{Merging multiple warpings}.
+
+@item -s
+@itemx --scale
+(@option{=FLT}) Scale the input image by the given factor.
 
 @item --hstartwcs
 (@option{=INT}) Specify the first header keyword number (line) that
