--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -16610,7 +16610,7 @@ main (void)
   float f[4]=@{1.3,0.2,1.8,0.1@};
   gal_qsort_index_arr=f;
   qsort(s, 4, sizeof(size_t), gal_qsort_index_float_decreasing);
-  printf("%lu, %lu, %lu, %lu\n", s[0], s[1], s[2], s[3]);
+  printf("%zu, %zu, %zu, %zu\n", s[0], s[1], s[2], s[3]);
   return EXIT_SUCCESS;
 @}
 @end example
